Simplify displaying & add embeddings generation for all products

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "ac1a6ab6",
    "metadata": {},
    "outputs": [
@@ -95,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "id": "6b6d1061",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9f4dc06a5a9429cb99cddd24bc2b231",
+       "model_id": "3895222ace4240deacf9915595498ed3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "d8948d84",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "e906d9e2",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "id": "6c039db2",
    "metadata": {},
    "outputs": [
@@ -219,18 +219,6 @@
      "text": [
       "Sparse vector information:\n",
       "Number of tokens with weights: 57\n",
-      "\n",
-      "Sample of token IDs and weights:\n",
-      "  Token ID 73111: 0.1993\n",
-      "  Token ID 12: 0.0215\n",
-      "  Token ID 6987: 0.1790\n",
-      "  Token ID 2271: 0.1504\n",
-      "  Token ID 53: 0.2017\n",
-      "  Token ID 1111: 0.1603\n",
-      "  Token ID 25: 0.0012\n",
-      "  Token ID 7: 0.0244\n",
-      "  Token ID 37029: 0.1849\n",
-      "  Token ID 7113: 0.3137\n",
       "\n",
       "Top 10 tokens by weight:\n",
       "  vara: 0.3137\n",
@@ -251,19 +239,12 @@
     "print(\"Sparse vector information:\")\n",
     "print(f\"Number of tokens with weights: {len(sparse_weights)}\")\n",
     "\n",
-    "# Display a sample of token IDs and weights\n",
-    "print(\"\\nSample of token IDs and weights:\")\n",
-    "sparse_items = list(sparse_weights.items())[:10]  # First 10 items\n",
-    "for token_id, weight in sparse_items:\n",
-    "    print(f\"  Token ID {token_id}: {weight:.4f}\")\n",
-    "\n",
-    "# Convert token IDs to actual tokens and sort by weight\n",
+    "# Convert token IDs to readable tokens\n",
     "token_map = model.convert_id_to_token([sparse_weights])\n",
-    "sorted_tokens = sorted(token_map.items(), key=lambda x: float(x[1]), reverse=True)\n",
     "\n",
     "# Display top tokens by weight\n",
     "print(\"\\nTop 10 tokens by weight:\")\n",
-    "for token, weight in sorted_tokens[:10]:\n",
+    "for token, weight in sorted(token_map.items(), key=lambda x: float(x[1]), reverse=True)[:10]:\n",
     "    print(f\"  {token}: {float(weight):.4f}\")"
    ]
   },
@@ -277,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "8c397bad",
    "metadata": {},
    "outputs": [
@@ -285,31 +266,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ColBERT vectors information:\n",
-      "Shape: (82, 1024)\n",
-      "Number of token vectors: 82\n",
-      "Vector dimension: 1024\n",
+      "ColBERT vectors: (82, 1024) (tokens × dimensions)\n",
       "\n",
-      "Sample of first 5 token vectors (first 3 dimensions each):\n",
-      "  Vector 0: [-0.015277110040187836, -0.05877283960580826, 0.0036948397755622864]\n",
-      "  Vector 1: [-0.035025328397750854, -0.05892220884561539, -0.020987864583730698]\n",
-      "  Vector 2: [-0.00875769555568695, -0.03164244443178177, -0.007193501573055983]\n",
-      "  Vector 3: [-0.04171895608305931, -0.015494350343942642, -0.004048152826726437]\n",
-      "  Vector 4: [-0.052237991243600845, -0.007237554062157869, 0.0014343017246574163]\n"
+      "First 5 token vectors (first 3 dimensions each):\n",
+      "  Token 0: [-0.015277110040187836, -0.05877283960580826, 0.0036948397755622864]\n",
+      "  Token 1: [-0.035025328397750854, -0.05892220884561539, -0.020987864583730698]\n",
+      "  Token 2: [-0.00875769555568695, -0.03164244443178177, -0.007193501573055983]\n",
+      "  Token 3: [-0.04171895608305931, -0.015494350343942642, -0.004048152826726437]\n",
+      "  Token 4: [-0.052237991243600845, -0.007237554062157869, 0.0014343017246574163]\n"
      ]
     }
    ],
    "source": [
     "# Display ColBERT vectors\n",
-    "print(\"ColBERT vectors information:\")\n",
-    "print(f\"Shape: {colbert_vectors.shape}\")\n",
-    "print(f\"Number of token vectors: {len(colbert_vectors)}\")\n",
-    "print(f\"Vector dimension: {colbert_vectors.shape[1]}\")\n",
-    "\n",
-    "print(\"\\nSample of first 5 token vectors (first 3 dimensions each):\")\n",
+    "print(f\"ColBERT vectors: {colbert_vectors.shape} (tokens × dimensions)\")\n",
+    "print(\"\\nFirst 5 token vectors (first 3 dimensions each):\")\n",
     "for i in range(min(5, len(colbert_vectors))):\n",
-    "    values = colbert_vectors[i][:3].tolist() if hasattr(colbert_vectors[i][:3], 'tolist') else colbert_vectors[i][:3]\n",
-    "    print(f\"  Vector {i}: {values}\")"
+    "    print(f\"  Token {i}: {colbert_vectors[i][:3].tolist()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "663d09f8",
+   "metadata": {},
+   "source": [
+    "## Step 5: Calculate Embeddings for all products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e2962585",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6ec1fbf566084459831aff41c21d41b6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/751 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated embeddings for 751 products\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Process all products to generate vectors\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "# List to store all product embeddings\n",
+    "all_product_embeddings = []\n",
+    "\n",
+    "# Process all products with progress bar\n",
+    "for product in tqdm(products_json):\n",
+    "    # Format product text\n",
+    "    product_text = create_product_text(product)\n",
+    "\n",
+    "    # Generate embeddings\n",
+    "    output = model.encode(\n",
+    "        [product_text], \n",
+    "        return_dense=True,\n",
+    "        return_sparse=True,\n",
+    "        return_colbert_vecs=True\n",
+    "    )\n",
+    "\n",
+    "    # Extract vectors\n",
+    "    product_embedding = {\n",
+    "        \"product\": product,\n",
+    "        \"dense_vector\": output['dense_vecs'][0],\n",
+    "        \"sparse_weights\": output['lexical_weights'][0],\n",
+    "        \"colbert_vectors\": output['colbert_vecs'][0]\n",
+    "    }\n",
+    "    \n",
+    "    # Add to collection\n",
+    "    all_product_embeddings.append(product_embedding)\n",
+    "\n",
+    "print(f\"Generated embeddings for {len(all_product_embeddings)} products\")"
    ]
   }
  ],
