Store dense, sparse and colbert vectors in qdrant

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -34,7 +34,8 @@
    "outputs": [],
    "source": [
     "%pip install -U transformers FlagEmbedding accelerate\n",
-    "%pip install pandas"
+    "%pip install pandas\n",
+    "%pip install qdrant_client"
    ]
   },
   {
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "ac1a6ab6",
    "metadata": {},
    "outputs": [
@@ -95,14 +96,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "6b6d1061",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/demid/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3895222ace4240deacf9915595498ed3",
+       "model_id": "de2b30ffa3514c9083a3c68c8c8e7af8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "id": "d8948d84",
    "metadata": {},
    "outputs": [
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "id": "e906d9e2",
    "metadata": {},
    "outputs": [
@@ -209,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "id": "6c039db2",
    "metadata": {},
    "outputs": [
@@ -218,7 +227,7 @@
      "output_type": "stream",
      "text": [
       "Sparse vector information:\n",
-      "Number of tokens with weights: 57\n",
+      "Number of tokens with weights: 60\n",
       "\n",
       "Top 10 tokens by weight:\n",
       "  vara: 0.3137\n",
@@ -258,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "id": "8c397bad",
    "metadata": {},
    "outputs": [
@@ -295,14 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "e2962585",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ec1fbf566084459831aff41c21d41b6",
+       "model_id": "aa5ffe0af6b249449a080f2094b3cbcf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -353,6 +362,153 @@
     "    all_product_embeddings.append(product_embedding)\n",
     "\n",
     "print(f\"Generated embeddings for {len(all_product_embeddings)} products\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "deb046d8",
+   "metadata": {},
+   "source": [
+    "## Step 6: Create Qdrant collection for dense, sparse and multivectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "9b62cad8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collection 'products' created successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "from qdrant_client import QdrantClient, models\n",
+    "\n",
+    "# Initialize Qdrant client\n",
+    "client = QdrantClient(\"localhost\", port=6333)  # Adjust host/port as needed\n",
+    "\n",
+    "# Create collection with dense vectors, sparse vectors, and ColBERT multi-vectors\n",
+    "client.create_collection(\n",
+    "    collection_name=\"products\",\n",
+    "    vectors_config={\n",
+    "        \"dense\": models.VectorParams(\n",
+    "            size=1024,\n",
+    "            distance=models.Distance.COSINE\n",
+    "        ),\n",
+    "        \"colbert\": models.VectorParams(\n",
+    "            size=1024,\n",
+    "            distance=models.Distance.COSINE,\n",
+    "            multivector_config=models.MultiVectorConfig(\n",
+    "                comparator=models.MultiVectorComparator.MAX_SIM\n",
+    "            ),\n",
+    "        )\n",
+    "    },\n",
+    "    sparse_vectors_config={\n",
+    "        \"sparse\": models.SparseVectorParams(\n",
+    "            index=models.SparseIndexParams(\n",
+    "                on_disk=True\n",
+    "            )\n",
+    "        )\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "print(\"Collection 'products' created successfully\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5003f69",
+   "metadata": {},
+   "source": [
+    "## Step 7: Insert embeddings in qdrant collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "21a0be1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 751/751 [01:43<00:00,  7.27it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully inserted 751 products into the 'products' collection\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from qdrant_client import QdrantClient, models\n",
+    "from tqdm import tqdm\n",
+    "import numpy as np\n",
+    "\n",
+    "# Function to insert product embeddings to Qdrant one by one\n",
+    "def insert_products_to_qdrant(product_embeddings):\n",
+    "    for embedding in tqdm(product_embeddings):\n",
+    "        product = embedding[\"product\"]\n",
+    "        dense_vector = embedding[\"dense_vector\"]\n",
+    "        colbert_vectors = embedding[\"colbert_vectors\"]\n",
+    "        sparse_data = embedding[\"sparse_weights\"]\n",
+    "        \n",
+    "        # Simplified sparse vector processing\n",
+    "        sparse_indices = []\n",
+    "        sparse_values = []\n",
+    "        \n",
+    "        for key, value in sparse_data.items():\n",
+    "            # Only process positive values\n",
+    "            if float(value) > 0:\n",
+    "                # Handle string keys\n",
+    "                if isinstance(key, str):\n",
+    "                    if key.isdigit():\n",
+    "                        key = int(key)\n",
+    "                    else:\n",
+    "                        continue\n",
+    "                \n",
+    "                sparse_indices.append(key)\n",
+    "                sparse_values.append(float(value))\n",
+    "        \n",
+    "        # Create and insert point\n",
+    "        client.upsert(\n",
+    "            collection_name=\"products\",\n",
+    "            points=[\n",
+    "                models.PointStruct(\n",
+    "                    id=product[\"Id\"],\n",
+    "                    payload=product,\n",
+    "                    vector={\n",
+    "                        \"dense\": dense_vector,\n",
+    "                        \"colbert\": colbert_vectors,\n",
+    "                        \"sparse\": models.SparseVector(\n",
+    "                            indices=sparse_indices,\n",
+    "                            values=sparse_values\n",
+    "                        )\n",
+    "                    }\n",
+    "                )\n",
+    "            ]\n",
+    "        )\n",
+    "    \n",
+    "    print(f\"Successfully inserted {len(product_embeddings)} products into the 'products' collection\")\n",
+    "\n",
+    "# Call the function with your product embeddings\n",
+    "insert_products_to_qdrant(all_product_embeddings)"
    ]
   }
  ],
