Add search hybrid query

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "id": "ac1a6ab6",
    "metadata": {},
    "outputs": [
@@ -73,16 +73,13 @@
     "import pandas as pd\n",
     "import json\n",
     "\n",
-    "# Load the product dataset\n",
     "products_df = pd.read_csv('products.csv', sep='|')\n",
     "\n",
-    "# Convert dataframe to list of dictionaries (JSON format)\n",
     "products_json = products_df.to_dict(orient='records')\n",
     "\n",
     "# Print the first product as JSON\n",
     "print(json.dumps(products_json[0], indent=2))\n",
     "\n",
-    "# Print total number of products\n",
     "print(f\"Total products: {len(products_json)}\")"
    ]
   },
@@ -96,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6b6d1061",
    "metadata": {},
    "outputs": [
@@ -111,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de2b30ffa3514c9083a3c68c8c8e7af8",
+       "model_id": "88e03345339f444281fe95805fa92355",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "id": "d8948d84",
    "metadata": {},
    "outputs": [
@@ -188,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "id": "e906d9e2",
    "metadata": {},
    "outputs": [
@@ -218,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "id": "6c039db2",
    "metadata": {},
    "outputs": [
@@ -227,7 +224,7 @@
      "output_type": "stream",
      "text": [
       "Sparse vector information:\n",
-      "Number of tokens with weights: 60\n",
+      "Number of tokens with weights: 57\n",
       "\n",
       "Top 10 tokens by weight:\n",
       "  vara: 0.3137\n",
@@ -244,7 +241,6 @@
     }
    ],
    "source": [
-    "# Display sparse vector\n",
     "print(\"Sparse vector information:\")\n",
     "print(f\"Number of tokens with weights: {len(sparse_weights)}\")\n",
     "\n",
@@ -267,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 56,
    "id": "8c397bad",
    "metadata": {},
    "outputs": [
@@ -287,7 +283,6 @@
     }
    ],
    "source": [
-    "# Display ColBERT vectors\n",
     "print(f\"ColBERT vectors: {colbert_vectors.shape} (tokens × dimensions)\")\n",
     "print(\"\\nFirst 5 token vectors (first 3 dimensions each):\")\n",
     "for i in range(min(5, len(colbert_vectors))):\n",
@@ -304,14 +299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e2962585",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa5ffe0af6b249449a080f2094b3cbcf",
+       "model_id": "b43882c5842c4ee280009a2c1a164fd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -331,10 +326,8 @@
     }
    ],
    "source": [
-    "# Process all products to generate vectors\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "# List to store all product embeddings\n",
     "all_product_embeddings = []\n",
     "\n",
     "# Process all products with progress bar\n",
@@ -342,7 +335,6 @@
     "    # Format product text\n",
     "    product_text = create_product_text(product)\n",
     "\n",
-    "    # Generate embeddings\n",
     "    output = model.encode(\n",
     "        [product_text], \n",
     "        return_dense=True,\n",
@@ -350,7 +342,6 @@
     "        return_colbert_vecs=True\n",
     "    )\n",
     "\n",
-    "    # Extract vectors\n",
     "    product_embedding = {\n",
     "        \"product\": product,\n",
     "        \"dense_vector\": output['dense_vecs'][0],\n",
@@ -358,7 +349,6 @@
     "        \"colbert_vectors\": output['colbert_vecs'][0]\n",
     "    }\n",
     "    \n",
-    "    # Add to collection\n",
     "    all_product_embeddings.append(product_embedding)\n",
     "\n",
     "print(f\"Generated embeddings for {len(all_product_embeddings)} products\")"
@@ -374,22 +364,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "9b62cad8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collection 'products' created successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from qdrant_client import QdrantClient, models\n",
     "\n",
-    "# Initialize Qdrant client\n",
     "client = QdrantClient(\"localhost\", port=6333)  # Adjust host/port as needed\n",
     "\n",
     "# Create collection with dense vectors, sparse vectors, and ColBERT multi-vectors\n",
@@ -429,8 +410,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ade5d027",
+   "metadata": {},
+   "source": [
+    "### Function to create a qdrant sparse vector from bge-m3 output"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
+   "id": "abf3cf13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_sparse_vector(sparse_data):\n",
+    "    sparse_indices = []\n",
+    "    sparse_values = []\n",
+    "    \n",
+    "    for key, value in sparse_data.items():\n",
+    "        # Only process positive values\n",
+    "        if float(value) > 0:\n",
+    "            # Handle string keys\n",
+    "            if isinstance(key, str):\n",
+    "                if key.isdigit():\n",
+    "                    key = int(key)\n",
+    "                else:\n",
+    "                    continue\n",
+    "                \n",
+    "            sparse_indices.append(key)\n",
+    "            sparse_values.append(float(value))\n",
+    "    \n",
+    "    return models.SparseVector(\n",
+    "        indices=sparse_indices,\n",
+    "        values=sparse_values\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5861a6d5",
+   "metadata": {},
+   "source": [
+    "### Inserting products in collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "21a0be1e",
    "metadata": {},
    "outputs": [
@@ -457,36 +484,19 @@
     }
    ],
    "source": [
-    "from qdrant_client import QdrantClient, models\n",
+    "from qdrant_client import models\n",
     "from tqdm import tqdm\n",
-    "import numpy as np\n",
     "\n",
-    "# Function to insert product embeddings to Qdrant one by one\n",
+    "# Function to insert product embeddings to Qdrant\n",
     "def insert_products_to_qdrant(product_embeddings):\n",
     "    for embedding in tqdm(product_embeddings):\n",
     "        product = embedding[\"product\"]\n",
     "        dense_vector = embedding[\"dense_vector\"]\n",
     "        colbert_vectors = embedding[\"colbert_vectors\"]\n",
     "        sparse_data = embedding[\"sparse_weights\"]\n",
+    "\n",
+    "        qdrant_sparse = create_sparse_vector(sparse_data)\n",
     "        \n",
-    "        # Simplified sparse vector processing\n",
-    "        sparse_indices = []\n",
-    "        sparse_values = []\n",
-    "        \n",
-    "        for key, value in sparse_data.items():\n",
-    "            # Only process positive values\n",
-    "            if float(value) > 0:\n",
-    "                # Handle string keys\n",
-    "                if isinstance(key, str):\n",
-    "                    if key.isdigit():\n",
-    "                        key = int(key)\n",
-    "                    else:\n",
-    "                        continue\n",
-    "                \n",
-    "                sparse_indices.append(key)\n",
-    "                sparse_values.append(float(value))\n",
-    "        \n",
-    "        # Create and insert point\n",
     "        client.upsert(\n",
     "            collection_name=\"products\",\n",
     "            points=[\n",
@@ -496,10 +506,7 @@
     "                    vector={\n",
     "                        \"dense\": dense_vector,\n",
     "                        \"colbert\": colbert_vectors,\n",
-    "                        \"sparse\": models.SparseVector(\n",
-    "                            indices=sparse_indices,\n",
-    "                            values=sparse_values\n",
-    "                        )\n",
+    "                        \"sparse\": qdrant_sparse\n",
     "                    }\n",
     "                )\n",
     "            ]\n",
@@ -507,8 +514,235 @@
     "    \n",
     "    print(f\"Successfully inserted {len(product_embeddings)} products into the 'products' collection\")\n",
     "\n",
-    "# Call the function with your product embeddings\n",
     "insert_products_to_qdrant(all_product_embeddings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c38f456b",
+   "metadata": {},
+   "source": [
+    "## Step 8: Retrieve & re-rank based on search query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "686d969b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search_products(search_query, limit=3, prefetch_limit=6):\n",
+    "    query_outputs = model.encode(\n",
+    "        [search_query],\n",
+    "        return_dense=True,\n",
+    "        return_sparse=True,\n",
+    "        return_colbert_vecs=True\n",
+    "    )\n",
+    "    \n",
+    "    dense_vec = query_outputs[\"dense_vecs\"][0]\n",
+    "    sparse_vec = query_outputs[\"lexical_weights\"][0]\n",
+    "    colbert_vec = query_outputs[\"colbert_vecs\"][0]\n",
+    "    \n",
+    "    qdrant_sparse = create_sparse_vector(sparse_vec)\n",
+    "    \n",
+    "    # Set up prefetch for hybrid search\n",
+    "    prefetch = [\n",
+    "        models.Prefetch(\n",
+    "            query=qdrant_sparse,\n",
+    "            using=\"sparse\",\n",
+    "            limit=prefetch_limit),\n",
+    "        models.Prefetch(\n",
+    "            query=dense_vec,\n",
+    "            using=\"dense\",\n",
+    "            limit=prefetch_limit)\n",
+    "    ]\n",
+    "    \n",
+    "    # Perform reranking with ColBERT\n",
+    "    results = client.query_points(\n",
+    "        \"products\",\n",
+    "        prefetch=prefetch,\n",
+    "        query=colbert_vec,\n",
+    "        using=\"colbert\",\n",
+    "        with_payload=True,\n",
+    "        limit=limit,\n",
+    "    )\n",
+    "    \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7facf13d",
+   "metadata": {},
+   "source": [
+    "### Function to display search results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "625beff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_search_results(results):\n",
+    "    print(f\"Found {len(results.points)} matching products\")\n",
+    "    print(\"-\" * 40)\n",
+    "    \n",
+    "    for i, result in enumerate(results.points):    \n",
+    "        product = result.payload\n",
+    "        print(f\"{i+1}. {product['Name']} - Score: {result.score:.2f}\")\n",
+    "        print(f\"   Price: {product['Price']} {product['PriceCurrency']}\")\n",
+    "        \n",
+    "        # Truncate description if too long\n",
+    "        description = product.get('Description', '')\n",
+    "        if description and len(description) > 100:\n",
+    "            description = description[:97] + \"...\"\n",
+    "        \n",
+    "        if description:\n",
+    "            print(f\"   {description}\")\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b46d0414",
+   "metadata": {},
+   "source": [
+    "### A few examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a6630875",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3 matching products\n",
+      "----------------------------------------\n",
+      "1. adidas Men's Ultraboost Personal Best Running Shoe - Score: 3.76\n",
+      "   Price: 626.1 USD\n",
+      "   Men's shoes - low (non football).\n",
+      "\n",
+      "2. adidas Men's Racer Tr21 Running Shoe - Score: 3.51\n",
+      "   Price: 413.1 EUR\n",
+      "   Everyday style with a running twist. These men's adidas sneakers have a Cloudfoam midsole for ste...\n",
+      "\n",
+      "3. Under Armour Men's Charged Assert 9 Running Shoe - Score: 3.49\n",
+      "   Price: 434.94 USD\n",
+      "   These running shoes are built to help anyone go faster-Charged Cushioning® helps protect against ...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = search_products(\"running shoes for men\")\n",
+    "\n",
+    "display_search_results(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "0e78a15a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3 matching products\n",
+      "----------------------------------------\n",
+      "1. Nintendo Switch OLED Model - Score: 2.41\n",
+      "   Price: 349.99 USD\n",
+      "   The Nintendo Switch OLED Model offers a vivid 7-inch OLED display and enhanced audio for portable...\n",
+      "\n",
+      "2. NZND Case for At&t Motivate 3 (3rd Version)/ Motivate 2 (2nd)/ Cricket Icon 3/ Cricket Splendor with Tempered Glass Screen Protector, Ring Holder/Wrist Strap, Glitter Liquid Cute Case (Pink/Aqua) - Score: 2.10\n",
+      "   Price: 84.09 USD\n",
+      "   NZND Glitter Flowing Liquid Floating Gradient Colorful with Sparkling Bling Diamond, Durable Girl...\n",
+      "\n",
+      "3. Samsung 980 PRO 1TB NVMe M.2 SSD - Score: 1.97\n",
+      "   Price: 149.99 USD\n",
+      "   The Samsung 980 PRO offers lightning-fast read and write speeds, ideal for high-performance gamin...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = search_products(\"nintendo\")\n",
+    "\n",
+    "display_search_results(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "53ef877d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3 matching products\n",
+      "----------------------------------------\n",
+      "1. PowerA Advantage Wired Controller for Xbox Series X|S with Lumectra + RGB LED Strip - Black, gamepad, wired video game controller, gaming controller, works with Xbox One and Windows 10/11, Officially Licensed for Xbox - Score: 3.36\n",
+      "   Price: 473.73 EUR\n",
+      "   Illuminate the possibilities with the PowerA Advantage Wired Controller for Xbox Series X|S with ...\n",
+      "\n",
+      "2. Microsoft Xbox Series X - Score: 2.79\n",
+      "   Price: 499.99 USD\n",
+      "   The Microsoft Xbox Series X offers powerful gaming performance with 4K resolution, lightning-fast...\n",
+      "\n",
+      "3. Microsoft Xbox Series X - Score: 2.74\n",
+      "   Price: 499.99 USD\n",
+      "   The Xbox Series X is a powerful next-gen gaming console with 4K UHD resolution, fast loading spee...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = search_products(\"xbox gamepad\")\n",
+    "\n",
+    "display_search_results(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "43e8ca41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3 matching products\n",
+      "----------------------------------------\n",
+      "1. Samsung Galaxy S22 Ultra - Score: 2.96\n",
+      "   Price: 1199.99 USD\n",
+      "   The Samsung Galaxy S22 Ultra features a 108MP camera, 5G support, and a large AMOLED display, off...\n",
+      "\n",
+      "2. Samsung Galaxy S22 5G - Score: 2.91\n",
+      "   Price: 799.99 USD\n",
+      "   The Samsung Galaxy S22 5G features a dynamic AMOLED display, advanced cameras, and 5G capabilitie...\n",
+      "\n",
+      "3. Samsung Galaxy S21 Ultra | Factory Unlocked Android Cell Phone | US Version 5G Smartphone | Pro-Grade Camera, 8K Video, 108MP High Res | 128GB, Phantom Black (SM-G998UZKAXAA) (Renewed) - Score: 2.28\n",
+      "   Price: 348.47 USD\n",
+      "   Pro Grade Camera Zoom in close, take photos and videos like a pro, and capture incredible share-r...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = search_products(\"samsung s22\")\n",
+    "\n",
+    "display_search_results(result)"
    ]
   }
  ],
